--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
-    hello kon
+    <div class="container">
+        hello kon    
+    </div>
+    
     <marquee>New project is under maintainance</marquee>
 </body>
 </html>
